Fix OverdraftProtectionDecorator to use public adjustBalanceAndNotify. Update Account, CheckingAccount, SavingsAccount to use adjustBalanceAndNotify. Fix AccountFactoryTest message. Add surefire plugin to pom.xml.